--- a/django_chat/main/react/minimized-chat/src/index.css
+++ b/django_chat/main/react/minimized-chat/src/index.css
@@ -1,194 +1,202 @@
-#live-chat a { text-decoration: none; }
-
-#live-chat fieldset {
-	border: 0;
-	margin: 0;
-	padding: 0;
+#live-chat a {
+  text-decoration: none;
 }
 
-#live-chat h4,#live-chat  h5 {
-	line-height: 1.5em;
-	margin: 0;
+#live-chat fieldset {
+  border: 0;
+  margin: 0;
+  padding: 0;
+}
+
+#live-chat h4,
+#live-chat h5 {
+  line-height: 1.5em;
+  margin: 0;
 }
 
 hr {
-	background: #e9e9e9;
-    border: 0;
-    -moz-box-sizing: content-box;
-    box-sizing: content-box;
-    height: 1px;
-    margin: 0;
-    min-height: 1px;
+  background: #e9e9e9;
+  border: 0;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  height: 1px;
+  margin: 0;
+  min-height: 1px;
 }
 
 #live-chat img {
-    border: 0;
-    display: block;
-    height: auto;
-    max-width: 100%;
+  border: 0;
+  display: block;
+  height: auto;
+  max-width: 100%;
 }
 
 #live-chat input {
-	border: 0;
-	color: inherit;
-    font-family: inherit;
-    font-size: 100%;
-    line-height: normal;
-    margin: 0;
+  border: 0;
+  color: inherit;
+  font-family: inherit;
+  font-size: 100%;
+  line-height: normal;
+  margin: 0;
 }
 
-p { margin: 0; }
-
-.clearfix { *zoom: 1; } /* For IE 6/7 */
-.clearfix:before, .clearfix:after {
-    content: "";
-    display: table;
+p {
+  margin: 0;
 }
-.clearfix:after { clear: both; }
+
+.clearfix {
+  *zoom: 1;
+} /* For IE 6/7 */
+.clearfix:before,
+.clearfix:after {
+  content: "";
+  display: table;
+}
+.clearfix:after {
+  clear: both;
+}
 
 /* ---------- LIVE-CHAT ---------- */
 #live-chat {
-	bottom: 0;
-	font-size: 12px;
-	right: 24px;
-	position: fixed;
-	width: 300px;
+  bottom: 0;
+  font-size: 12px;
+  right: 24px;
+  position: fixed;
+  width: 300px;
 }
 
 #live-chat header {
-	background: #293239;
-	border-radius: 5px 5px 0 0;
-	color: #fff;
-	cursor: pointer;
-    width:100%;
-    display:inline-flex;
-    align-items:center;
-    justify-content: space-between;
+  background: #293239;
+  border-radius: 5px 5px 0 0;
+  color: #fff;
+  cursor: pointer;
+  width: 100%;
+  display: inline-flex;
+  align-items: center;
+  justify-content: space-between;
 }
-#live-chat header p{
-    display: flex;
+#live-chat header p {
+  display: flex;
 }
-
 
 #live-chat h4:before {
-	background: #1a8a34;
-	border-radius: 50%;
-	content: "";
-	display: inline-block;
-	height: 8px;
-	margin: 0 8px 0 0;
-	width: 8px;
+  background: #1a8a34;
+  border-radius: 50%;
+  content: "";
+  display: inline-block;
+  height: 8px;
+  margin: 0 8px 0 0;
+  width: 8px;
 }
 
 #live-chat h4 {
-	font-size: 12px;
-    padding:8px 10px;
-    flex: 1 1 70%;
+  font-size: 12px;
+  padding: 8px 10px;
+  flex: 1 1 70%;
 }
-#live-chat svg{
-    padding:8px;
+#live-chat svg {
+  padding: 8px;
 }
 #live-chat h5 {
-	font-size: 10px;
+  font-size: 10px;
 }
 
 #live-chat form {
-	padding: 24px;
+  padding: 24px;
 }
 
 #live-chat input[type="text"] {
-	border: 1px solid #ccc;
-	border-radius: 3px;
-	padding: 8px;
-	outline: none;
-	width: 234px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  padding: 8px;
+  outline: none;
+  width: 234px;
 }
 
 .chat-message-counter {
-	background: #e62727;
-	border: 1px solid #fff;
-	border-radius: 50%;
-	display: none;
-	font-size: 12px;
-	font-weight: bold;
-	height: 28px;
-	left: 0;
-	line-height: 28px;
-	margin: -15px 0 0 -15px;
-	position: absolute;
-	text-align: center;
-	top: 0;
-	width: 28px;
+  background: #e62727;
+  border: 1px solid #fff;
+  border-radius: 50%;
+  display: none;
+  font-size: 12px;
+  font-weight: bold;
+  height: 28px;
+  left: 0;
+  line-height: 28px;
+  margin: -15px 0 0 -15px;
+  position: absolute;
+  text-align: center;
+  top: 0;
+  width: 28px;
 }
 
 .chat-close {
-	background: #1b2126;
-	border-radius: 50%;
-	color: #fff;
-	display: block;
-	float: right;
-	font-size: 10px;
-	height: 16px;
-	line-height: 16px;
-	margin: 2px 0 0 0;
-	text-align: center;
-	width: 16px;
+  background: #1b2126;
+  border-radius: 50%;
+  color: #fff;
+  display: block;
+  float: right;
+  font-size: 10px;
+  height: 16px;
+  line-height: 16px;
+  margin: 2px 0 0 0;
+  text-align: center;
+  width: 16px;
 }
 
 .chat {
-	background: #fff;
+  background: #fff;
 }
 
 .chat-history {
-	height: 252px;
-	overflow-y: auto;
+  height: 252px;
+  overflow-y: auto;
 }
 
 .members {
-    padding:10px 8px;
-    cursor:pointer;
-    display:flex;
-    padding:5px;
+  padding: 10px 8px;
+  cursor: pointer;
+  display: flex;
+  padding: 5px;
 }
-.members:hover{
-    background: lightblue;
+.members:hover {
+  background: lightblue;
 }
 .members img {
-	border-radius: 50%;
-	float: left;
+  border-radius: 50%;
+  float: left;
 }
 
 .chat-message {
-    padding:10px 8px;
+  padding: 10px 8px;
 }
-.chat-message:hover{
-    background: lightblue;
+.chat-message:hover {
+  background: lightblue;
 }
 .chat-message img {
-	border-radius: 50%;
-	float: left;
+  border-radius: 50%;
+  float: left;
 }
 .chat-message-content {
-    flex: 1 1 30%;
-    display:flex;
-    align-items:center;
-    padding: 10px;
+  flex: 1 1 30%;
+  display: flex;
+  align-items: center;
+  padding: 10px;
 }
 
-.chat-message-content h5{
-    flex:1 1 40%;
-    font-size:13px !important;
+.chat-message-content h5 {
+  flex: 1 1 40%;
+  font-size: 13px !important;
 }
 .chat-time {
-	float: right;
-	font-size: 10px;
+  float: right;
+  font-size: 10px;
 }
 
 .chat-feedback {
-	font-style: italic;	
-	margin: 0 0 0 80px;
+  font-style: italic;
+  margin: 0 0 0 80px;
 }
-
 
 /*.outer{
   width:40px;
